--- a/README.adoc
+++ b/README.adoc
@@ -13,43 +13,19 @@ UML, Simulink, XML and other types of models.
 
 ## Example
 
-1. Define a Meta-model:
+1. Define a meta-model. The meta-model contains the definition of our structure:
+
+:testmodels: epsilon-runtime/epsilon-runtime-test-model/model
 
 [source, xml]
-
 ----
-<?xml version="1.0" encoding="UTF-8"?>
-<ecore:EPackage xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" name="data" nsURI="http://www.blackbelt.hu/epsilon-runtime/test" nsPrefix="data">
-  <eClassifiers xsi:type="ecore:EClass" name="DataModel">
-    <eStructuralFeatures xsi:type="ecore:EAttribute" name="name" eType="ecore:EDataType http://www.eclipse.org/emf/2002/Ecore#//EString"/>
-    <eStructuralFeatures xsi:type="ecore:EReference" name="entity" upperBound="-1"
-        eType="#//Entity" containment="true"/>
-  </eClassifiers>
-  <eClassifiers xsi:type="ecore:EClass" name="Entity">
-    <eStructuralFeatures xsi:type="ecore:EAttribute" name="name" eType="ecore:EDataType http://www.eclipse.org/emf/2002/Ecore#//EString"/>
-    <eStructuralFeatures xsi:type="ecore:EReference" name="attribute" lowerBound="1"
-        upperBound="-1" eType="#//Attribute" containment="true"/>
-    <eStructuralFeatures xsi:type="ecore:EReference" name="reference" upperBound="-1"
-        eType="#//EntityReference" containment="true"/>
-  </eClassifiers>
-  <eClassifiers xsi:type="ecore:EClass" name="Attribute">
-    <eStructuralFeatures xsi:type="ecore:EAttribute" name="name" eType="ecore:EDataType http://www.eclipse.org/emf/2002/Ecore#//EString"/>
-    <eStructuralFeatures xsi:type="ecore:EAttribute" name="type" eType="ecore:EDataType http://www.eclipse.org/emf/2002/Ecore#//EString"/>
-  </eClassifiers>
-  <eClassifiers xsi:type="ecore:EClass" name="EntityReference">
-    <eStructuralFeatures xsi:type="ecore:EAttribute" name="name" eType="ecore:EDataType http://www.eclipse.org/emf/2002/Ecore#//EString"/>
-    <eStructuralFeatures xsi:type="ecore:EAttribute" name="toMany" eType="ecore:EDataType http://www.eclipse.org/emf/2002/Ecore#//EBoolean"/>
-    <eStructuralFeatures xsi:type="ecore:EReference" name="target" lowerBound="1"
-        eType="#//Entity"/>
-  </eClassifiers>
-</ecore:EPackage>
+include::{testmodels}/epsilon-runtime-test.ecore[]
 ----
 
 [NOTE]
 ====
 In EMF (Emfatic fomat) - You can convert between .ecore and .emf within eclipse. 
-The ecpsilon-runtime will support emfatic format directly soon.
+The epsilon-runtime will support emfatic format directly soon.
 ====
 
 ----
@@ -61,20 +37,25 @@ class DataModel {
   val Entity[*] entity;
 }
 
-class Entity {
+class Entity { <1>
   attr String name;
   val Attribute[+] attribute;
   val EntityReference[*] reference;
 }
 
-class Attribute {
+class Attribute { <2>
   attr String name;
   attr String type;
 }
 
-class EntityReference {
+class EntityReference { <3>
   attr String name;
   attr boolean toMany;
   ref Entity[1] target;
 }
 ----
+<1> Entity - Represents a class 
+<2> Attribute - Represents an attribute of class
+<3> Reference - Represents a reference to a class
+
+
